tests: fix typing tests

--- a/tests/type_checking/test_delegator.yml
+++ b/tests/type_checking/test_delegator.yml
@@ -14,5 +14,5 @@
       i = Int(strict=False)
       m = Delegator(i)
 
-    reveal_type(A.m)  # N: Revealed type is "atom.delegator.Delegator[builtins.int, builtins.float]"
+    reveal_type(A.m)  # N: Revealed type is "atom.delegator.Delegator[builtins.int, Union[builtins.int, builtins.float]]"
     reveal_type(A().m)  # N: Revealed type is "builtins.int"
