--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,15 +4,15 @@ repos:
   hooks:
     - id: isort
 - repo: https://github.com/psf/black
-  rev: 22.3.0
+  rev: 22.10.0
   hooks:
     - id: black
-- repo: https://gitlab.com/pycqa/flake8
-  rev: 4.0.1
+- repo:  https://github.com/PyCQA/flake8
+  rev: 6.0.0
   hooks:
     - id: flake8
 - repo: https://github.com/pre-commit/mirrors-mypy
-  rev: v0.960
+  rev: v0.991
   hooks:
     - id: mypy
       additional_dependencies: []
