--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,7 +95,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11.0-beta - 3.11.0']
+        python-version: ['3.8', '3.9', '3.10', '3.11']
     steps:
       - uses: actions/checkout@v3
       - name: Get history and tags for SCM versioning to work
@@ -121,23 +121,12 @@ jobs:
         run: |
           pip install -r test_requirements.txt
           python -X dev -m pytest tests --ignore=tests/type_checking --cov --cov-report xml -v
-      - name: Generate C++ coverage reports
-        if: (github.event_name != 'schedule' && matrix.os != 'windows-latest')
-        run: |
-          bash -c "find . -type f -name '*.gcno' -exec gcov -pb --all-blocks {} +" || true
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
-        if: (github.event_name != 'schedule' && matrix.os == 'windows-latest')
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           flags: unittests
           name: codecov-umbrella
           fail_ci_if_error: true
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
-        if: (github.event_name != 'schedule' && matrix.os != 'windows-latest')
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          flags: unittests
-          name: codecov-umbrella
-          fail_ci_if_error: true
+          verbose: true
+          gcov: true
