--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,7 +116,7 @@ jobs:
         # Build extensions manually to allow getting C coverage data
         run: |
           python setup.py build_ext
-          pip install .
+          pip install -e .
       - name: Test with pytest
         # XXX Disabled warnings check ( -W error) to be able to test on 3.11
         # (pyparsing deprecation)
