--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.9']
+        python-version: ['3.10']
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
@@ -115,8 +115,8 @@ jobs:
           CPPFLAGS: --coverage
         # Build extensions manually to allow getting C coverage data
         run: |
-          python setup.py build_ext
           pip install -e .
+          python setup.py build_ext
       - name: Test with pytest
         # XXX Disabled warnings check ( -W error) to be able to test on 3.11
         # (pyparsing deprecation)
@@ -126,7 +126,7 @@ jobs:
       - name: Generate C++ coverage reports
         if: (github.event_name != 'schedule' && matrix.os != 'windows-latest')
         run: |
-          bash -c "find . -type f -name '*.gcno' -exec gcov -pb --all-blocks {} +" || true
+          bash -c "find . -type f -name 'atom/src/*.gcno' -exec gcov -pb --all-blocks --filter atom/ {} +" || true
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
         with:
@@ -135,3 +135,4 @@ jobs:
           name: codecov-umbrella
           fail_ci_if_error: true
           verbose: true
+          directory: .
