--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'pip'
+          cache-dependency-path: 'lint_requirements.txt'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -37,7 +39,7 @@ jobs:
           pip install -e .
       - name: Install dependencies
         run: |
-          pip install -r lint_requirements.txt
+          pip install -U -r lint_requirements.txt
       - name: Isort
         run: |
           isort atom examples tests -c
@@ -106,6 +108,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'pip'
+          cache-dependency-path: 'test_requirements.txt'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -115,8 +119,7 @@ jobs:
           CPPFLAGS: --coverage
         # Build extensions manually to allow getting C coverage data
         run: |
-          pip install -e .
-          python setup.py build_ext
+          python setup.py develop
       - name: Test with pytest
         # XXX Disabled warnings check ( -W error) to be able to test on 3.11
         # (pyparsing deprecation)
