--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,6 +113,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install setuptools-scm[toml]
           pip install git+https://github.com/nucleic/cppy@main
       - name: Install project
         env:
