--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,7 +9,9 @@ version: 2
 build:
   os: ubuntu-20.04
   tools:
-    python: "3.9"
+    python: "3.10"
+  apt_packages:
+    - graphviz
 
 # Build documentation in the docs/source directory with Sphinx
 sphinx:
