atom: improve typing (using pyright as a guide)
Pyright cannot be satisfied in all cases (it sometimes complain of redundant overload but mypy need both) still the improvements are nice to take.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: Implementation :: CPython",
 ]
+dependencies = [
+  "typing_extensions;python_version<'3.11'"
+]
 dynamic=["version"]
 
 [project.urls]
