--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
     if: needs.lint.result == 'success'
     strategy:
       matrix:
-        python-version: ['3.8', '3.9']
+        python-version: ['3.9']
     steps:
       - uses: actions/checkout@v3
       - name: Get history and tags for SCM versioning to work
@@ -97,7 +97,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.9', '3.10', '3.11']
     steps:
       - uses: actions/checkout@v3
       - name: Get history and tags for SCM versioning to work
